Add support to build component specific css with webpack.

--- a/app/assets/styles/specifics/_typography.scss
+++ b/app/assets/styles/specifics/_typography.scss
@@ -2,8 +2,9 @@ body {
 	font-family: $base-font-family;
 	font-size: $base-font-size;
 	line-height: $base-line-height;
+	font-weight: $base-font-weight;
 
-	color: $base-font-color;
+	color: $base-color;
 }
 
 h1 {}
