--- a/app/assets/scripts/todo/todo-app.scss
+++ b/app/assets/scripts/todo/todo-app.scss
@@ -1,30 +1,13 @@
-/**
- * Example
+/*
+ * This file is part of a sample todo application.
  *
- * Remove this file before writing your own styles,
+ * (c) Magnus Bergman <hello@magnus.sexy>
  *
- * This is a bad example on how to organize your sass, place your variables
- * in the base/project/variables file and build your styles in a more
- * component based matter.
- *
- * This is only bunched together to make the example look better and to be
- * removed without too much fuss.
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
  */
 
-$bg-color: #2f3545;
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  background: $bg-color;
-  color: $base-color;
-  font-family: 'Avenir Next', 'Helvetica Neue', Arial, sans-serif;
-  font-weight: 200;
-}
+@import '~assets/styles/base/__base';
 
 .main {
   max-width: 64em;
@@ -32,12 +15,14 @@ body {
 
   padding-top: 5em;
   padding-bottom: 5em;
+
+  opacity: 1;
 }
 
 .introduction {
   text-align: center;
 
-  @media (width <= 32em) { padding: 0 1em; }
+  @media (max-width: 32em) { padding: 0 1em; }
 
   h1 {
     margin-top: 0;
@@ -62,10 +47,10 @@ footer {
 .todo-app {
   padding: 0 20%;
 
-  @media (width <= 56em) { padding: 0 15%; }
-  @media (width <= 48em) { padding: 0 10%; }
-  @media (width <= 40em) { padding: 0 5%; }
-  @media (width <= 32em) { padding: 0 1em; }
+  @media (max-width: 56em) { padding: 0 15%; }
+  @media (max-width: 48em) { padding: 0 10%; }
+  @media (max-width: 40em) { padding: 0 5%; }
+  @media (max-width: 32em) { padding: 0 1em; }
 
   *:focus { outline: 0; }
 
@@ -92,11 +77,11 @@ footer {
   .content {
     padding: 2em 2em 0;
 
-    @media (width <= 32em) { padding: 2em 0 0; }
+    @media (max-width: 32em) { padding: 2em 0 0; }
   }
 
   .item-list {
-    @extend reset-list;
+    @extend %reset-list;
 
     margin: 1em 0;
     padding: 1em 0;
@@ -113,7 +98,7 @@ footer {
     padding-left: 2em;
 
     input {
-      @mixin visibly-hidden;
+      @extend %screen-reader-only;
 
       &:checked ~ span {
         svg { opacity: 1; }
@@ -158,7 +143,7 @@ footer {
 
     transition: background 100ms ease-out;
 
-    &:hover { background: color($bg-color, blackness(+5%)); }
+    &:hover { background: darken($bg-color, 5%); }
 
     svg { fill: #fff; }
   }
