--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -3,6 +3,6 @@
 @import '../../../bower_components/normalize-scss/normalize';
 @import '../../../bower_components/susy/sass/susy';
 
-@import 'base/__base';
-@import 'components/__components';
-@import 'specifics/__specifics';
+@import 'base/_base';
+@import 'components/_components';
+@import 'specifics/_specifics';
