--- a/app/assets/styles/components/_main.scss
+++ b/app/assets/styles/components/_main.scss
@@ -1,4 +1,39 @@
 .main {
+  max-width: 64em;
+  margin: 0 auto;
+
+  padding-top: 5em;
+  padding-bottom: 5em;
+
+  opacity: 1;
+}
+
+.introduction {
+  text-align: center;
+
+  @media (max-width: 32em) { padding: 0 1em; }
+
+  h1 {
+    margin-top: 0;
+
+    font-size: 4em;
+    font-weight: 100;
+  }
+
+  .logo {
+    width: 4.375em;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+.todo-app {
   opacity: 0;
   transition: opacity 400ms $easeOutQuad;
+}
+
+footer {
+  margin-top: 2em;
+  text-align: center;
 }
