--- a/app/assets/styles/base/utils/__utils.scss
+++ b/app/assets/styles/base/utils/__utils.scss
@@ -1,3 +1,3 @@
-@import 'functions/_functions';
-@import 'mixins/_mixins';
-@import 'helpers/_helpers';
+@import 'functions/__functions';
+@import 'mixins/__mixins';
+@import 'helpers/__helpers';
