--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,8 +1,8 @@
 @charset 'UTF-8';
 
-@import '../../../bower_components/normalize-scss/normalize';
-@import '../../../bower_components/susy/sass/susy';
+@import 'bower_components/normalize-scss/normalize';
+@import 'bower_components/susy/sass/susy';
 
-@import 'base/_base';
-@import 'components/_components';
-@import 'specifics/_specifics';
+@import 'base/__base';
+@import 'components/__components';
+@import 'specifics/__specifics';
