Replace component specific css with styles using radium. Rewrite gulp with es2015 (es6). Drop normalize.css in favor of sanitize.css. Remove bower completely.

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,8 +1,8 @@
 @charset 'UTF-8';
 
-@import 'bower_components/normalize-scss/normalize';
-@import 'bower_components/susy/sass/susy';
-
 @import 'base/__base';
+
+@import 'node_modules/sanitize.css/sanitize';
+
 @import 'components/__components';
 @import 'specifics/__specifics';
