--- a/app/assets/styles/base/project/_variables.scss
+++ b/app/assets/styles/base/project/_variables.scss
@@ -1,24 +1,24 @@
 // Fonts -----------------------------------------------------------------------
-$base-font-family: 'Avenir Next', 'Helvetica Neue', Arial, sans-serif;
-$base-font-size: 16px;
-$base-line-height: 1.6;
-$base-font-weight: 200;
+$default-font-family: 'Avenir Next', 'Helvetica Neue', Arial, sans-serif;
+$default-font-size: 16px;
+$default-line-height: 1.6;
+$default-font-weight: 100;
 
 // Colors ----------------------------------------------------------------------
-$base-color: #fff;
-$accent-color: turquoise;
+$color-base: #fff;
+$color-accent: turquoise;
 
-$bg-color: #2f3545;
+$color-bg: #2f3545;
 
-$light-contrast-color: #fbfcfc;
-$medium-contrast-color: #969696;
-$dark-contrast-color: #2f2f2f;
+$contrast-color-light: #fbfcfc;
+$contrast-color-medium: #969696;
+$contrast-color-dark: #2f2f2f;
 
-$base-font-color: #222;
-$subtle-font-color: #888;
+$font-color-base: #222;
+$font-color-subtle: #888;
 
-$base-link-color: $accent-color;
-$base-link-hover-color: darken($accent-color, 5%);
+$link-color: $color-accent;
+$link-color-hover: darken($color-accent, 5%);
 
 // Easing effects
 $easeInSine: cubic-bezier(0.47, 0, 0.745, 0.715);
