--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -2,7 +2,7 @@
 
 @import 'base/__base';
 
-@import 'node_modules/sanitize.css/sanitize';
+@import '~sanitize.css/sanitize';
 
 @import 'components/__components';
 @import 'specifics/__specifics';
