--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,7 @@
 
 @import 'base/__base';
 
-@import 'sanitize.css/sanitize';
+@import 'sanitize.css/sanitize.scss';
 
 @import 'components/__components';
 @import 'specifics/__specifics';
