--- a/app/scripts/components/TodoApp/TodoList/todo-list.scss
+++ b/app/scripts/components/TodoApp/TodoList/todo-list.scss
@@ -1,12 +1,12 @@
 @import '~utils/__utils';
 
-.item-list {
+.todos {
   padding: 2em 2em 0;
 
   @media (max-width: 32em) { padding: 2em 0 0; }
 }
 
-.items {
+.todo-list {
   list-style: none;
 
   margin: 1em 0;
